2008-03-14  Cody Russell  <bratsche@gnome.org>

	* examples/scribble-xinput/scribble-xinput.c: Changed
	'void int main()' to 'int main()'. (#522211, Liqing Huang)
	
2008-03-14  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c:
	(gdk_window_quartz_process_all_updates): Patch from Paul Davis,
	only flush the toplevel once per update.

2008-03-13  Federico Mena Quintero  <federico@novell.com>

	* gtk/gtkfilechooserentry.c (create_completion_feedback_window):
	Set the mouse cursor of the feedback window to invisible, so that
	we respect GtkEntry's invisible cursor while typing.

2008-03-13  Federico Mena Quintero  <federico@novell.com>

	* gtk/gtkfilechooserentry.c (show_completion_feedback_window): Put
	the feedback window at entry_height/2 pixels to the right of the
	cursor, for a cheap "M-width / 2" spacing.

2008-03-13  Sven Neumann  <sven@gimp.org>

	* gtk/gtkfilechooserdefault.c
	* gtk/gtkprintunixdialog.c: set alternative button order for
	overwrite confirmation dialogs (bug #522191).

2008-03-13  Sven Neumann  <sven@gimp.org>

	* gtk/gtkprintunixdialog.c (add_custom_button_to_dialog)
	(overwrite_confirmation_dialog): added some line-breaks for
	readability.

2008-03-12  Federico Mena Quintero  <federico@novell.com>

	Rework the way completion works in GtkFileChooserEntry.  Fixes
	http://bugzilla.gnome.org/attachment.cgi?bugid=314873 - 
	Tab completion should work even if the cursor is not at the end of
	the entry.

	* gtk/gtkfilechooserentry.c: Change the strategy by which we do
	completion.

	We distinguish between two cases:

		- autocompletion - happens only in the Open modes by
		  inserting and selecting the common prefix as you type.

		- explicit completion - happens when you hit Tab.

	When some type of completion needs to happen, the entry first
	parses its input and sees if it needs to initiate a folder load.
	Completion will not happen until the folder finishes loading.
